fixed property details image url

--- a/PropertyRentalSystem-Frontend/.env
+++ b/PropertyRentalSystem-Frontend/.env
@@ -1,2 +1,4 @@
 REACT_APP_API_URL=https://prs-deployment-latest.onrender.com
 # REACT_APP_API_URL=http://localhost:8081
+docker buildx build --platform linux/amd64 -t prathamesh27/prs-deployment-final:latest .
+docker push prathamesh27/prs-deployment-final:latest
